feat: adicionar suporte a localização e melhorias na verificação semântica

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/compiler.exe",
-            "args": [],
+            "args": [
+                "tests/sort.txt"
+            ],
             "cwd": "${workspaceFolder}",
-            "preLaunchTask": "Build with Clang"
         }
     ]
 }
