feat: adicionar testes semânticos para variáveis não declaradas e função Fibonacci

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
                 "tests/sort.txt"
             ],
             "cwd": "${workspaceFolder}",
+            "preLaunchTask": "Build with Clang",
         }
     ]
 }
